--- a/src/styles/scss/variables.scss
+++ b/src/styles/scss/variables.scss
@@ -1,5 +1,11 @@
-$color-background-gray: #333;
-$color-background-display-gray: #666;
-$color-button-gray: #888;
-$color-button-white: #fff;
+$color-background-dark: #333;
+$color-background-display-dark: #666;
+$color-button-dark: #888;
+$color-button-text-dark: #fff;
+
+$color-background-light: #eeeeee;
+$color-background-display-light: #e0e0e0;
+$color-button-light: #d1d1d1;
+$color-button-text-light: #333;
+
 $color-button-orange: #ff9500;
